--- a/assets/main.css
+++ b/assets/main.css
@@ -1,15 +1,14 @@
-/*body{
-    background-color: #EDF2F3;
-    overflow-x: hidden;
+body{
+/*    background-color: #EDF2F3;
+*/    overflow-x: hidden;
     height: 100vh;
 }
 
-/* principal container for all display*/
+ principal container for all display
 
-/*.main-container{
+.main-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: -0.50rem;
-    
-}*/
+	margin: 0 50rem 0 50rem;;    
+}
