--- a/rapport/assets/main.css
+++ b/rapport/assets/main.css
@@ -1,12 +1,18 @@
+*{
+    font-family: Verdana, Geneva, sans-serif;
+  }
+  
 body{
-/*    background-color: #EDF2F3;
-*/    overflow-x: hidden;
+    background-color: "#ffffff";
+    overflow-x: hidden;
     height: 100vh;
 }
+
 
 
 .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: "#ffffff";
 }
